--- a/Oximede/css/style.css
+++ b/Oximede/css/style.css
@@ -284,7 +284,7 @@ button {
 .navigation.navbar-dark .navbar-nav .nav-link.active,
 .navigation.navbar-dark .navbar-nav .nav-link.show,
 .navigation.navbar-dark .navbar-nav .show>.nav-link {
-     color: #FFEF00;
+     color: #333333;
 }
 
 .navbar-expand-md .navbar-nav {
@@ -427,7 +427,7 @@ button {
 }
 
 .green {
-     color: #FFEF00 !important;
+     color: #FFF100 !important;
 }
 
 .d_flex {
@@ -1049,6 +1049,19 @@ ul.link_menu li a:hover {
 
 .in_page .header {
      border-bottom: #FFEF00 solid 2px;
-     
-    
+
+}
+
+.whatsapp-button {
+     position: fixed;
+     bottom: 20px;
+     right: 20px;
+     width: 100px;
+     height: 100px;
+     z-index: 1000;
+}
+
+.whatsapp-button img {
+     width: 100%;
+     height: auto;
 }
